tests/final/expect/15__diag__axis4_wave8_depth_conditional_active_branch_matrix_fail_no_crash.diag
Diagnostics:
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_axis4_wave8_depth_conditional_active_branch_matrix_fail_no_crash_a.h:9:12: error: macro 'AX4_W8_ACTIVE_CALL' requires 3 argument(s), got 2
Error: preprocessing failed
axis4_wave8_active_layer_a.h:541105:12: error: macro 'AX4_W8_ACTIVE_CALL' requires 3 argument(s), got 2
axis4_wave8_active_layer_a.h:541105:12: error: macro 'AX4_W8_ACTIVE_CALL' requires 3 argument(s), got 2
